# kova

./: Cargo.toml  kova.toml.example
docs/: index.html
src/: config.rs  lib.rs  main.rs
src/arb/: calculator.rs  detector.rs  mod.rs  types.rs
src/engine/: executor.rs  journal.rs  mod.rs  risk.rs
src/exchange/: mod.rs  types.rs
src/exchange/binance/: auth.rs  mod.rs  models.rs  rest.rs  ws.rs
src/exchange/paribu/: auth.rs  mod.rs  models.rs  rest.rs  ws.rs
src/util/: decimal.rs  mod.rs  shutdown.rs
